Fix button color in dark mode on Error Status modal

--- a/apps/block_scout_web/assets/css/theme/_dai_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_dai_variables.scss
@@ -81,13 +81,6 @@ $modal-status-graph-success: $secondary;
 		outline: none !important;
 		border-color: #e2e5ec !important;
 	}
-	.btn-line {
-		border-color: $primary;
-		color: $primary;
-		&:hover {
-			background-color: $primary
-		}
-	}
 }
 .stakes-table-th-content {
 	.i-tooltip {
